updated date inputs to display correctly on mobile

--- a/style.css
+++ b/style.css
@@ -201,6 +201,8 @@ body {
     -o-appearance: none;
     background-color: var(--rightSideBg);
     color: var(--inputColor);
+    width: 100%;
+    height: 35px;
 }
 
 .newProjectPopGrid fieldset div:nth-child(3) input:focus,
